ops/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookly-api
  labels:
    app: bookly-api
spec:
  selector:
    app: bookly-api
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  type: ClusterIP
